--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     //bluetooth print
     implementation 'com.github.mazenrashed:Printooth:1.3.0'
+
+    implementation 'br.com.simplepass:loading-button-android:2.2.0'
 }
