--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,14 @@ dependencies {
     implementation 'com.github.mazenrashed:Printooth:1.3.0'
 
     implementation 'br.com.simplepass:loading-button-android:2.2.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation('com.squareup.retrofit2:retrofit:2.1.0') {
+        // exclude Retrofit’s OkHttp dependency module and define your own module import
+        exclude module: 'okhttp'
+    }
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
