--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     //bluetooth print
     implementation 'com.github.mazenrashed:Printooth:1.3.0'
 
+    //loading button
     implementation 'br.com.simplepass:loading-button-android:2.2.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.2.0'
@@ -75,4 +76,7 @@ dependencies {
         exclude module: 'okhttp'
     }
     implementation 'com.google.code.gson:gson:2.8.8'
+
+    //spinkit view
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
