--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
             resolutionStrategy { force 'androidx.core:core:1.6.0' }
         }
 
+        multiDexEnabled true
+
         applicationId "com.example.differentuitest"
         minSdkVersion 19
         targetSdkVersion 32
@@ -41,6 +43,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -83,4 +86,9 @@ dependencies {
 
     //spinkit view
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    //Smooth Bottom Bar
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
