crop image testing

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
+        maven { url "https://jitpack.io" }
+        jcenter() // Warning: this repository is going to shut down soon )
+                {
+                    content {
+                        includeModule("com.theartofdev.edmodo","android-image-cropper")
+                    }
+                }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
@@ -16,8 +24,13 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
         maven { url "https://jitpack.io" }
+        jcenter() // Warning: this repository is going to shut down soon )
+                {
+                    content {
+                        includeModule("com.theartofdev.edmodo","android-image-cropper")
+                    }
+                }
     }
 }
 
