--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,8 @@ dependencies {
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.9'
 
     implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 }
