--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,8 +102,8 @@
 <!--            android:screenOrientation="portrait"-->
 <!--            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />-->
 
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+<!--        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"-->
+<!--            android:theme="@style/Base.Theme.AppCompat" />-->
     </application>
 
 </manifest>
